# hsi-preproc-toolbox

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: README.md
docs/: methodology.md
examples/: run_pipeline.py
src/hsi_preproc_toolbox/: __init__.py  batch.py  dark_correction.py  elc.py  io.py  panel_selection.py  pipeline.py  qc.py  smoothing.py
tests/: test_dark_correction.py  test_elc.py  test_pipeline.py
validation_runs/: README.md  generate_processing_logs.py  reproduce_table3_and_figure8.ipynb
validation_runs/bochum_2025_10/: panel_validation_metrics_per_band.csv  processing_log.json  qc_summary.json
validation_runs/ibbenburen_2023_07/: panel_validation_metrics_per_band.csv  processing_log.json  qc_summary.json
validation_runs/itzenplitz_2025_11/: panel_validation_metrics_per_band.csv  processing_log.json  qc_summary.json
